# mypy-extras

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: conf.py  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
mypy_extras/: __init__.py  attr_of.py
mypy_extras/plugin/: entrypoint.py
mypy_extras/plugin/features/: attr_of.py  ensure_attr.py
mypy_extras/plugin/typeops/: definitions.py  fallbacks.py
tests/: test_imports.py
typesafety/test_attr_of/: test_attr_of_errors.yml  test_attr_of_instance.yml  test_attr_of_type.yml
typesafety/test_ensure_attr/: test_ensure_attr_errors.yml  test_ensure_attr_instance.yml
