[tool.poetry]
name = "mypy-extras"
description = "A collection of extra types and features for mypy"
version = "0.1.0"
license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>",
]

readme = "README.md"

repository = "https://github.com/wemake.services/mypy-extras"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = ">=1.5,<3.0"
nitpick = ">=0.34,<0.36"
doc8 = "^1.1"

pytest = ">=7.3,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
pytest-mypy-plugins = "^3.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2,<8.0"
sphinx-autodoc-typehints = ">=1.12,<3.0"
sphinxcontrib-mermaid = ">=0.9,<1.2"
added-value = "^0.24"
m2r2 = "^0.3"
tomli = "^2.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.18.0/styles/nitpick-style-wemake.toml"
